# yatagarasu

./: .gitignore  .gitmodules  LICENSE  README.md  go2rtc.yaml
docs/: CHANGELOG.md  README.md  setup-manual.md  覚書.md
docs/considerations/: README.md  open-issues.md
docs/phase_logs/: README.md  phase-01.md
docs/plan/: README.md  tapo-robot-architecture.md  tapo-robot-deployment.md  tapo-robot-listend-install.md  tapo-robot-listend-system-design.md  tapo-robot-requirements.md  tapo-robot-thinking-order.md
docs/research/: README.md  deployment-options.md
docs/tasks/: README.md  tapo-robot-backlog.md
python/: .coverage  listend.py  pyproject.toml
workspace/: .env.example  .gitignore  CLAUDE.md
workspace/.claude/: CLAUDE.md
workspace/.claude/skills/memorize/: SKILL.md
workspace/.claude/skills/move-camera/: SKILL.md
workspace/.claude/skills/move-camera/scripts/: ptz_control  ptz_control.sh
workspace/.claude/skills/recall/: SKILL.md
workspace/.claude/skills/recall/scripts/: recall.sh
workspace/.claude/skills/remember/scripts/: remember.sh
workspace/.claude/skills/speak/scripts/: zunda
workspace/.claude/skills/tanechan-fetch/: SKILL.md
workspace/.claude/skills/tanechan-search/: SKILL.md
workspace/.claude/skills/view/: SKILL.md
workspace2/: .env.example  .gitignore
workspace2/.claude/: CLAUDE.md
workspace2/.claude/skills/remember/: SKILL.md
workspace2/.claude/skills/view/: SKILL.md
workspace_origin/: .env.example
workspace_origin/.claude/: CLAUDE.md
workspace_origin/.claude/skills/speak/: SKILL.md
(+7 files in other folders)
