[project]
name = "yatagarasu"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "faster-whisper>=1.1.0",
    "numpy>=2.1.0",
    "onvif-zeep>=0.2.12",
    "silero-vad>=5.1.2",
    "torch>=2.2.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
]
